add Java exercises for item30