@@ -17,7 +17,7 @@ public class RecursiveTypeBound {
     }
 
     public static void main(String[] args) {
-        List<String> argList = Arrays.asList(args);
+        List<String> argList = List.of("a", "b", "c", "d");
         System.out.println(max(argList));
     }
 }
